# todolist

./: API_DOCUMENTATION.md  README.md
backend/: .env_example  .gitignore  docker-compose.yml  pyproject.toml
backend/todolist/: settings.py  urls.py
backend/todolist/tasks/: admin.py  apps.py  models.py  permissions.py  urls.py  views.py
backend/todolist/tasks/migrations/: 0001_initial.py
backend/todolist/tasks/tests/: test_models.py  test_views.py
frontend/: .env_example  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: api.js  auth.js  index.js  task.js
frontend/src/config/: index.js
frontend/src/directives/: index.js  required-marker.js
frontend/src/enums/: index.js  task-status.js
frontend/src/hooks/: dialog-confirm.js  index.js
frontend/src/layouts/: default-layout.vue
frontend/src/pages/: error-404.vue  error.vue  home.vue
frontend/src/pages/log-in/: log-in.vue
frontend/src/pages/sign-up/: sign-up.vue
frontend/src/pages/tasks/: columns.js  tasks.vue
frontend/src/pages/tasks/create-task/: create-task-dialog.vue  form-data.vue
frontend/src/pages/tasks/update-task/: form-data.vue  update-task-dialog.vue
frontend/src/router/: index.js  routes.js
frontend/src/store/: index.js
frontend/src/store/modules/app/: actions.js  mutations.js  state.js
